# korea-economic-stats-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  mcp_server.py
app/agent/: ecos_agent.py  ecos_tools.py  news_agent.py  news_tools.py  state.py  tools.py  tools_news.py
app/api/: routes.py
app/core/: callbacks.py  config.py  dependencies.py  logger.py  utils.py
app/repository/: statistics.py
app/schema/: chat.py  news.py  statistics.py
app/services/: ecos_service.py  news_service.py  statistics_service.py
app/workflow/ecos/: graph.py  state.py
app/workflow/ecos/nodes/: __init__.py  fetch_data.py  fetch_items.py  fetch_statistics.py  generate.py  select_parameters.py  select_statistic.py
data/: ecos_statistics.csv
tests/: verify_agent_flow.py  verify_mcp.py
