[project]
name = "korea-economic-stats-ai-agent"
version = "0.1.0"
description = "Korean Economic Statistics AI Agent"
authors = [
    {name = "Nayeon Kim", email = "inourbubble2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain-community>=0.0.10",
    "numpy>=1.24.0",
    "ag-ui-langgraph (>=0.0.22,<0.0.23)",
    "copilotkit (==0.1.74)",
    "mcp>=1.25.0",
    "newspaper4k>=0.9.4.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Ignore line length for prompts and tools that need long queries/URLs
"app/agent/ecos_agent.py" = ["E501"]
"app/agent/tools.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
